// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolSelectionComponent Renders item with selected analysis type 1`] = `
<div
  className="ToolSelection-container"
>
  <Divider>
    Analysis tool
  </Divider>
  <div>
    Select the tool you would like to use for your analysis. A detailed description of the tools can be found
     
    <Component
      className="tool-selection__link"
      onClick={[Function]}
      to="/help/tools"
    >
      here
    </Component>
    .
  </div>
  <div
    className="ToolSelection-select-container"
  >
    <div
      className="ToolSelection-analysis-select"
    >
      <CustomField
        name="analysisType"
        onChange={[Function]}
        options={
          Array [
            Object {
              "disabled": true,
              "text": "Condition v condition",
              "value": "conditioncondition",
            },
            Object {
              "disabled": true,
              "text": "Correlation",
              "value": "correlation",
            },
            Object {
              "text": "Dot plot",
              "value": "dotplot",
            },
            Object {
              "disabled": true,
              "text": "Specificity",
              "value": "specificity",
            },
          ]
        }
        placeHolder="Analysis type..."
        type="select"
      />
    </div>
    <div
      className="ToolSelection-tool-description"
    >
      <Alert
        message={
          <span>
            This tool takes quantitative information on condition-readout datasets and visualizes the information as either a dot plot or heat map. This is an ideal way of visualizing small to moderately sized data sets (≤ 20 conditions). See the
             
            <Unknown
              className="tool-selection__link"
              onClick={[Function]}
              to="/help/tools/dotplot"
            >
              help
            </Unknown>
             
            for more information on this tool
          </span>
        }
        showIcon={true}
        type="info"
      />
    </div>
  </div>
</div>
`;

exports[`ToolSelectionComponent Renders item without selected analysis type 1`] = `
<div
  className="ToolSelection-container"
>
  <Divider>
    Analysis tool
  </Divider>
  <div>
    Select the tool you would like to use for your analysis. A detailed description of the tools can be found
     
    <Component
      className="tool-selection__link"
      onClick={[Function]}
      to="/help/tools"
    >
      here
    </Component>
    .
  </div>
  <div
    className="ToolSelection-select-container"
  >
    <div
      className="ToolSelection-analysis-select"
    >
      <CustomField
        name="analysisType"
        onChange={[Function]}
        options={
          Array [
            Object {
              "disabled": true,
              "text": "Condition v condition",
              "value": "conditioncondition",
            },
            Object {
              "disabled": true,
              "text": "Correlation",
              "value": "correlation",
            },
            Object {
              "text": "Dot plot",
              "value": "dotplot",
            },
            Object {
              "disabled": true,
              "text": "Specificity",
              "value": "specificity",
            },
          ]
        }
        placeHolder="Analysis type..."
        type="select"
      />
    </div>
  </div>
</div>
`;
